[tool.poetry]
name = "chainlit-chatbot"
version = "0.1.0"
description = ""
authors = ["kuldeep  jeengar <kuldeepjeengar50@gmail.com>"]
readme = "README.md"
packages = [{include = "chainlit_chatbot"}]

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"
chromadb = "^0.5.20"
sentence-transformers = "^3.3.1"
gtts = "^2.5.4"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
